samples/_failures_safe/1761443280_2e59d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0982c7bb.c: In function ‘main’:
./samples/SAFE/__tmp_0982c7bb.c:171:19: error: expected ‘)’ at end of input
  171 |     free_matrix(&a
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_0982c7bb.c:171:5: error: expected declaration or statement at end of input
  171 |     free_matrix(&a
      |     ^~~~~~~~~~~
